# foundation

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  test.txt  vcpkg.json
cmake/: warnings.cmake
cmake/vcpkg-overlay-ports/fastgltf/: link-option-livepp.patch  portfile.cmake  vcpkg.json
cmake/vcpkg-overlay-ports/flecs/: link-option-livepp.patch  portfile.cmake  vcpkg-cmake-wrapper.cmake  vcpkg.json
cmake/vcpkg-overlay-ports/fmt/: link-option-livepp.patch  portfile.cmake
cmake/vcpkg-overlay-ports/glfw3/: link-option-livepp.patch  portfile.cmake
cmake/vcpkg-overlay-ports/imgui/: CMakeLists.txt
cmake/vcpkg-overlay-ports/imguizmo/: portfile.cmake
cmake/vcpkg-overlay-ports/lua/: CMakeLists.txt
cmake/vcpkg-overlay-ports/meshoptimizer/: link-option-livepp.patch  portfile.cmake  vcpkg.json
cmake/vcpkg-overlay-ports/quill/: link-option-livepp.patch  portfile.cmake
cmake/vcpkg-overlay-ports/shader-slang/: portfile.cmake  vcpkg.json
cmake/vcpkg-overlay-ports/simdjson/: link-option-livepp.patch  portfile.cmake
cmake/vcpkg-overlay-ports/sol2/: clang-fix.patch  header-only.patch  portfile.cmake  vcpkg.json
cmake/vcpkg-overlay-ports/zstd/: link-option-livepp.patch  portfile.cmake
src/: application.cpp  application.hpp  main.cpp  pch.hpp
src/asset/: asset_manager.cpp  asset_manager.hpp  asset_processor.hpp  binary_assets.hpp  gpu_asset_manager_data.cpp  gpu_asset_manager_data.hpp
src/common/: result.hpp  thread_pool.cpp  thread_pool.hpp
src/ecs/: animation_manager.cpp  animation_manager.hpp  asset_manager.cpp  asset_manager.hpp  asset_processor.cpp  asset_processor.hpp  binary_assets.hpp  components.cpp  components.hpp  entity.cpp  entity.hpp  gpu_scene.cpp  gpu_scene.hpp  scene.cpp  scene.hpp
src/graphics/: camera.cpp  camera.hpp  context.cpp  context.hpp  helper.cpp  helper.hpp  misc.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
src/graphics/common/tasks/: clear_image.inl  clear_image.slang  debug.glsl  debug.inl  debug.slang  debug_image.inl  debug_image.slang
src/graphics/path_tracing/tasks/: raytrace.inl  raytrace.slang
src/graphics/post_processing/tasks/: calculate_frustums.inl  calculate_frustums.slang  cull_lights.inl  cull_lights.slang  generate_gbuffer.inl  generate_gbuffer.slang  generate_ssao.inl  generate_ssao.slang
src/graphics/traditional/tasks/: render_meshes.glsl  render_meshes.inl  render_meshes.slang  triangle.inl  triangle.slang
src/graphics/utils/: cpu_managed_gpu_pool.hpp  gpu_metric.cpp  gpu_metric.hpp
src/graphics/virtual_geometry/: virtual_geometry.cpp  virtual_geometry.hpp
src/graphics/virtual_geometry/tasks/: build_index_buffer.inl  build_index_buffer.slang  combine_depth.inl  combine_depth.slang  cull_meshes.inl  cull_meshes.slang  cull_meshlets.inl  cull_meshlets.slang  debug.glsl  debug.inl  debug.slang  draw_meshlets.glsl  draw_meshlets.inl  draw_meshlets.slang  draw_meshlets_masked.inl  draw_meshlets_masked.slang  draw_meshlets_only_depth.inl  draw_meshlets_only_depth.slang  draw_meshlets_only_depth_masked.inl  draw_meshlets_only_depth_masked.slang  draw_meshlets_transparent.inl  draw_meshlets_transparent.slang  extract_depth.inl  extract_depth.slang  generate_hiz.glsl  generate_hiz.inl  populate_meshlets.inl  populate_meshlets.slang  ray_tracing.inl  ray_tracing.slang  resolve_visibility_buffer.inl  resolve_visibility_buffer.slang  resolve_wboit.inl  resolve_wboit.slang  skin_animated_meshes.inl  skin_animated_meshes.slang  software_rasterization.inl  software_rasterization.slang  software_rasterization_compute.inl  software_rasterization_compute.slang  (+4 more)
src/graphics/virtual_geometry/tasks/unused/: build_index_buffer.inl  build_index_buffer.slang  draw_meshlets_mesh.inl  draw_meshlets_mesh.slang  populate_meshlets.inl  populate_meshlets.slang
src/math/: decompose.cpp  decompose.hpp
src/scripting/: scripting_engine.cpp  scripting_engine.hpp
src/shader_library/: cull_util.slang  debug_util.slang  glue.inl  meshlet.slang  shading.slang  shared.inl  software_rasterization.slang  vertex_compression.inl  visibility_buffer.slang  work_expansion.slang
src/shader_library/common/: normal_mapping.slang
src/shader_library/path_tracing/: aabb.slang  hittable.slang  interval.slang  ray.slang  sphere.slang
src/shader_library/std/: allocator.slang  array.slang  memory_ops.slang  vector.slang
src/shared/: glue.inl  shared.inl
src/ui/: scene_hierarchy_panel.cpp  scene_hierarchy_panel.hpp  ui.cpp  ui.hpp  ui_window.cpp  ui_window.hpp
src/ui/panels/: file_browser.cpp  file_browser.hpp  scene_hierarchy_panel.cpp  scene_hierarchy_panel.hpp  viewport_panel.cpp  viewport_panel.hpp
src/utils/: byte_utils.hpp  file_io.cpp  file_io.hpp  file_watcher.cpp  file_watcher.hpp  logger.cpp  logger.hpp  performace_metrics.hpp  zstd.cpp  zstd.hpp
